tests/src/snapshots/pluma_tests__parse_success__number.snap
---
source: tests/src/parse_success.rs
expression: "47"
---

=== Source ===
47

=== Tokens ===
[
    DecimalDigits(
        0,
        2,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        2,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                2,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        2,
                    ),
                    kind: Literal(
                        LiteralNode {
                            pos: (
                                0,
                                2,
                            ),
                            kind: IntDecimal(
                                47,
                            ),
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

